@@ -1,3 +1,7 @@
+Unreleased
+
+* Add index to Link (David Venhoff, #202)
+
 2.3.0 (2023-12-27)
 
 * Fix encoding of utf-8 domain names (Timo Brembeck, #190)
